--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ img {
 }
 a {
     text-decoration: none;
+    color: #fff;
 }
 .text-right {
     text-align: right;
@@ -731,8 +732,6 @@ h2.email a {
 .left-sidebar .theme-btn {
     width: 100%;
 }
-
-
 
 /* 07 - Hero Section */
 .hero-section {
